# building-from-scratch

./: .gitattributes  .gitignore  Readme.md  requirements.txt
basic-gpt/: Readme.md  bigram-dev.ipynb  bigram.py
basic-gpt/helper_scripts/: plot_loss.py
bpe/: Readme.md  bpe-dev.ipynb  bpe.py  generate_profile_summary.py  lecture_notes.md  train_TinyStoriesV2.py  train_bpe.py  train_gpt2.py
bpe/data/: fineweb-000_00003-gpt4-train-16384.model  fineweb-000_00003-gpt4-train-16384.vocab  text.txt  tinystoriesv2-gpt4-train-16384.model  tinystoriesv2-gpt4-train-16384.vocab  tinystoriesv2-gpt4-train-2048.model  tinystoriesv2-gpt4-train-2048.vocab  tinystoriesv2-gpt4-train-8192.model  tinystoriesv2-gpt4-train-8192.vocab  tinystoriesv2-gpt4-valid-baseline-276.model  tinystoriesv2-gpt4-valid-optimized-276.vocab  tok276.model  (+3 more)
bpe/encode_rs/: Cargo.toml  README.md  run.py  run.rs
bpe/encode_rs/src/: bpe_encode.rs  lib.rs
dpo/: Readme.md  evaluate_instruct.py  train_dpo.py
expert-iteration/: Readme.md  evaluate.py  run_exp_iter.sh  train.py  train_exp_iter.py
gpt-2/: Readme.md  fineweb-modal.py  requirements.txt
grpo/: Notes.md  Readme.md  run_jobs.sh  setup_modal.py  train_grpo.py  train_on_modal.py
llm-inference/: Readme.md  benchmark_kv_cache.py  benchmark_speculative.py  infer.py  infer_speculative.py  model.py
sft/: Notes.md  Readme.md  evaluate.py  evaluate_dialogue_alpaca_eval.py  evaluate_dialogue_gsm8k.py  evaluate_instruct.py  evaluate_instruct_mmlu.py  requirements.txt  train_sft.py  train_sft_instruct.py  train_sft_reason.py
transformers/: Readme.md
(+222 files in other folders)
